fixed flickering links

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
-// ------Variables------//
+//------Variables------//
 $brightPurple: rgb(255, 2, 255);
-$transparent: rgba(0,0,0,0.3);
+$seeThru: rgba(0,0,0,0.3);
 
 @mixin flexCenter {
     display: flex;
@@ -14,6 +14,7 @@ $transparent: rgba(0,0,0,0.3);
 a {
     text-decoration: none;
     padding: 0;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .section {
@@ -30,6 +31,7 @@ a {
     font-family: 'Black Ops One', cursive;
     font-size: 3rem;
     z-index: 1;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .enter a:hover {
@@ -81,8 +83,6 @@ article {
 nav {
     color: $brightPurple;
     flex-direction: row;
-    color: $brightPurple!important;
-    
 }
 
 ul {
@@ -171,7 +171,7 @@ i:hover {
     margin-top: 10px;
     padding-right: 60px;
     box-sizing: border-box;
-    background: $transparent;
+    background: $seeThru;
     border: 2px solid purple;
     border-radius: 50px;
     color: rgb(255, 2, 255);
